--- a/index.html
+++ b/index.html
@@ -494,7 +494,16 @@
         import { getFirestore, doc, getDoc, setDoc, updateDoc, deleteDoc, onSnapshot, collection, query, addDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
         
         // --- GLOBAL DEĞİŞKENLER VE VERİTABANI İLKELENDİRMELERİ ---
-        const firebaseConfig = JSON.parse(typeof __firebase_config !== 'undefined' ? __firebase_config : '{}');
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyAGWCz-1V06n3suezP-AQMLq9QhNawmDcY",
+  authDomain: "unutmamben-ef175.firebaseapp.com",
+  projectId: "unutmamben-ef175",
+  storageBucket: "unutmamben-ef175.firebasestorage.app",
+  messagingSenderId: "529674985123",
+  appId: "1:529674985123:web:37951f62f89250dedd2916",
+  measurementId: "G-YHZMQ7TX39"
+};
         const appId = typeof __app_id !== 'undefined' ? __app_id : 'default-app-id';
 
         let app;
